--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,4 +1,7 @@
 /* Write your CSS here */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 .home-bg {
   display: flex;
   flex-direction: row;
@@ -10,6 +13,7 @@
 .head {
   color: rgb(0, 102, 255);
   font-weight: 600;
+  font-size: 20px;
 }
 .but {
   background-color: #090d73;
@@ -29,4 +33,123 @@
   align-items: center;
   width: 1200px;
   height: 70px;
+  margin-left: 20px;
+  margin-top: 10px;
+  border-radius: 8px;
+  color: #fff;
+}
+.cont-1 {
+  background-color: #fff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10px;
+  box-shadow: inset;
+  padding-left: 15px;
+  padding-right: 15px;
+  justify-content: space-between;
+  padding: 5px;
+}
+.head-cont {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 6px;
+}
+.input-cont {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-style: solid;
+  border-width: 1px;
+  padding: 2px;
+  border-radius: 16px;
+  height: 40px;
+  width: 400px;
+}
+input {
+  background-color: transparent;
+  border-width: 0px;
+}
+.bg-2 {
+  background-color: #fff;
+  margin-left: 20px;
+  box-shadow: inset;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 15px;
+  height: 180px;
+  width: 1200px;
+  margin-top: 20px;
+}
+.input-s {
+  background-color: #f6f6f6;
+  height: 25px;
+  border-width: 1px;
+  padding: 2px;
+  margin-left: 10px;
+}
+.input-cont1 {
+  display: flex;
+  align-items: center;
+  width: 350px;
+  gap: 10px;
+  margin: 5px;
+}
+.bg-3 {
+  background-color: #fff;
+  margin-left: 20px;
+  box-shadow: inset;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 10px;
+  width: 1200px;
+  font-size: 16px;
+}
+.text-green {
+  color: green;
+}
+.text-red {
+  color: red;
+}
+.table-1 {
+  background-color: #fff;
+  padding: 15px;
+  height: 250px;
+  width: 1200px;
+  margin-left: 20px;
+}
+.table-2 {
+  display: flex;
+  align-items: center;
+  width: 1200px;
+  height: 73px;
+}
+.circle {
+  width: 40px;
+  display: flex;
+  align-items: center;
+}
+.p1 {
+  width: 180px;
+}
+.p2 {
+  width: 200px;
+}
+.p3 {
+  width: 120px;
+}
+.p4 {
+  width: 170px;
+}
+.p5 {
+  width: 80px;
+}
+.p6 {
+  width: 100px;
+  margin: 5px;
 }
