--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -6,6 +6,7 @@
   height: 100vh;
   width: 250px;
   padding: 10px;
+  box-shadow: inset;
 }
 .slide-ul {
   list-style: none;
@@ -25,4 +26,10 @@
 .selected {
   background-color: rgb(183, 233, 233);
   border-radius: 8px;
+}
+.slide-cont {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+  align-items: center;
 }
